# DifferentiableDavis1985

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: davis1985.yaml  davis1985_open.yaml  default.yaml  optimize.yaml  optimize_32.yaml  optimize_64.yaml  validation.yaml
final_report/: copy_assets.sh  index.md  index_final.md  update_links.sh
output/: README.md
paper_material/: analysis.md  gpt5_review.md  paper.txt  reproduction_generation_gemini3.md
src/differentiabledavis1985/: __init__.py  cli.py  config.py  davis1985_models.py  extract_mask.py  forward_model.py  losses.py  optimization.py  plotting.py  projection.py  simulation.py
tests/: __init__.py  test_fig1_bottomleft.py  test_forward_model.py
